fixing other layout bugs and styling missed page

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -136,6 +136,7 @@ ul.menu li{display:inline;list-style-image:none;list-style-position:outside;list
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.searchBoxContainer {width:280px;}
 .searchBoxContainer input {padding:12px; height:24px !important;}
 .searchBoxContainer .btn-group {float: right; position: relative; left: -14px;}
 .searchBoxContainer .btn-group button { font-size: 11px; margin-top: -5px !important; left:-6px; padding: 4px 6px; }
